added footer and modified 5th block

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
         <div>Block 2</div>
         <div>Block 3</div>
         <div>Block 4</div>
-        <div>5</div>
+        <div>block 5</div>
     </div>
+    <fotter class="fotter">my footer</fotter>
 
 </body>
 
